fix to get tags wrapping properly

--- a/examples/assets/bootstrap-tagsinput.less
+++ b/examples/assets/bootstrap-tagsinput.less
@@ -27,7 +27,7 @@
   }
 
   .tag {
-    margin-right: 5px;
+    margin-right: 2px;
     color: white;
 
     [data-role="remove"] {
